--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=keving-vargasb_testProject
 sonar.organization=keving-vargasb
-
+sonar.coverage.exclusions=**/android/**/*.*,**/ios/**/*.* 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=testProject
 #sonar.projectVersion=1.0
