--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=keving-vargasb_testProject
 sonar.organization=keving-vargasb
-sonar.coverage.exclusions=**/android/**/*.*,**/ios/**/*.* 
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=testProject
 #sonar.projectVersion=1.0
@@ -10,3 +10,22 @@ sonar.coverage.exclusions=**/android/**/*.*,**/ios/**/*.*
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.coverage.exclusions=**/android/**/*.*,**/ios/**/*.*,
+​sonar.exclusions=**/android/**/*.*,**/ios/**/*.*,
+sonar.javascript.file.suffixes=.js,.jsx,
+sonar.typescript.file.suffixes=.ts,.tsx,
+sonar.java.binaries=.
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
+sonar.html.file.suffixes=-
+sonar.css.file.suffixes=-
+sonar.java.file.suffixes=-
+sonar.sources=.
+sonar.exclusions=**/__tests__/*.tsx , **/coverage/**/*.js,**/setupTests.ts,**/babel.config.js,**/index.js, **/metro.config.js, **/App.tsx
+sonar.language=js,jsx,ts,tsx
+sonar.tests=./__tests__
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=./test-report.xml
+sonar.sourceEncoding=UTF-8
